src/OpenCvSharp/Internal/Interop/NativeMethods.Dnn.Structured.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_dnn_blob_rects_to_image_rects")]
        internal static extern int DnnBlobRectsToImageRects(in NativeDnnImage2BlobParams parameters, NativeDnnRect[] blobRects, int blobRectCount, int imageWidth, int imageHeight, NativeDnnRect[] imageRects, int imageRectCapacity, out int imageRectCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_dnn_nms_boxes_rect")]
        internal static extern int DnnNmsBoxesRect(NativeDnnRect[] boxes, int boxCount, float[] scores, int scoreCount, float scoreThreshold, float nmsThreshold, float eta, int topK, int[] indices, int indexCapacity, out int indexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_dnn_nms_boxes_rect2d")]
        internal static extern int DnnNmsBoxesRect2d(NativeDnnRect2d[] boxes, int boxCount, float[] scores, int scoreCount, float scoreThreshold, float nmsThreshold, float eta, int topK, int[] indices, int indexCapacity, out int indexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_dnn_nms_boxes_rotated_rect")]
        internal static extern int DnnNmsBoxesRotatedRect(NativeDnnRotatedRect[] boxes, int boxCount, float[] scores, int scoreCount, float scoreThreshold, float nmsThreshold, float eta, int topK, int[] indices, int indexCapacity, out int indexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_dnn_nms_boxes_batched_rect")]
        internal static extern int DnnNmsBoxesBatchedRect(NativeDnnRect[] boxes, int boxCount, float[] scores, int scoreCount, int[] classIds, int classIdCount, float scoreThreshold, float nmsThreshold, float eta, int topK, int[] indices, int indexCapacity, out int indexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_dnn_nms_boxes_batched_rect2d")]
        internal static extern int DnnNmsBoxesBatchedRect2d(NativeDnnRect2d[] boxes, int boxCount, float[] scores, int scoreCount, int[] classIds, int classIdCount, float scoreThreshold, float nmsThreshold, float eta, int topK, int[] indices, int indexCapacity, out int indexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_dnn_soft_nms_boxes_rect")]
        internal static extern int DnnSoftNmsBoxesRect(NativeDnnRect[] boxes, int boxCount, float[] scores, int scoreCount, float scoreThreshold, float nmsThreshold, float[] updatedScores, int updatedScoreCapacity, out int updatedScoreCount, int[] indices, int indexCapacity, out int indexCount, int topK, float sigma, int method);
    }
}
#endif
